Added new inputs to the costumer form + added models

--- a/modules/costumers/client/views/view-costumer.client.view.html
+++ b/modules/costumers/client/views/view-costumer.client.view.html
@@ -1,6 +1,18 @@
 <section>
   <div class="page-header">
     <h1 data-ng-bind="vm.costumer.name"></h1>
+   Address:
+      <span class="text-capitalize" data-ng-if="vm.costumer.address"
+            data-ng-bind="vm.costumer.address"></span>
+    <br>
+    State:
+      <span class="text-capitalize" data-ng-if="vm.costumer.state"
+            data-ng-bind="vm.costumer.state"></span>
+    <br>
+    Country:
+      <span class="text-capitalize" data-ng-if="vm.costumer.country"
+            data-ng-bind="vm.costumer.country"></span>
+    <br>
   </div>
   <div class="pull-right"
        data-ng-show="vm.costumer.isCurrentUserOwner">
@@ -13,21 +25,7 @@
     </a>
   </div>
   <small>
-    <em class="text-muted">Address:
-      <span class="text-capitalize" data-ng-if="vm.costumer.address"
-              data-ng-bind="vm.costumer.address"></span>
-    </em>
-    <br>
-    <em class="text-muted">State:
-      <span class="text-capitalize" data-ng-if="vm.costumer.state"
-         data-ng-bind="vm.costumer.state"></span>
-    </em>
-    <br>
-    <em class="text-muted">Country:
-      <span class="text-capitalize" data-ng-if="vm.costumer.country"
-              data-ng-bind="vm.costumer.country"></span>
-    </em>
-    <br>
+
     <em class="text-muted">
       Posted on
       <span data-ng-bind="vm.costumer.created | date:'mediumDate'"></span>
