--- a/modules/costumers/client/views/list-costumers.client.view.html
+++ b/modules/costumers/client/views/list-costumers.client.view.html
@@ -14,6 +14,9 @@
         <span data-ng-if="!costumer.user">Deleted User</span>
       </small>
       <h4 class="list-group-item-heading" data-ng-bind="costumer.name"></h4>
+      <p class="list-group-item-heading" ><strong>Ciudad:</strong> {{costumer.state}}</p>
+      <p class="list-group-item-heading" ><strong>Dirección:</strong> {{costumer.address}}</p>
+      <p class="list-group-item-heading" ><strong>Ciudad:</strong> {{costumer.country}}</p>
     </a>
   </div>
   <div class="alert alert-warning text-center" data-ng-if="vm.costumers.$resolved && !vm.costumers.length">
